tests/success/array_init_inside_compound_expr.bz
function test()
{
	(consteval {
		let _: [1: int32] = {
			let i = 0;
			[ i ]
		};
	});
}
