tests/error/comptime/pointer_difference02.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		&i - foo();
	});
}
